Fixed NavMenu overflow on small screen.

--- a/MYCareerWEB/Shared/NavMenu.razor.css
+++ b/MYCareerWEB/Shared/NavMenu.razor.css
@@ -14,8 +14,12 @@
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
-    width: 15rem;
+    width: 10rem;
 }
+
+    .nav-item ::deep span {
+        margin-right: 0.5em;
+    }
 
     .nav-item ::deep a {
         color: #d7d7d7;
